tests/expects/binary_op_failure/test_add_incompatible.expect
error: Arithmetic operation requires numeric types
  --> binary_op_failure/test_add_incompatible.truk:4:25
  |
3 |     var y: *i32 = make(@i32);
4 |     var result: i32 = x + y;
  |                         ^
5 |     delete(y);
  |

Compilation failed with 1 error(s)
